# nix-uv-matplot

./: flake.nix  pyproject.toml
src/matplot/: __init__.py  circle.py  highpass_filter.py  round-dot.py  rounded-square.py  square-dot.py  square-with-triangle.py  square.py  triangle.py
