[project]
name = "matplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "urllib3>=2.2.3",
]

[project.scripts]
#hello = "hello_world:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matplot"]

[dependency-groups]
dev = ["ruff>=0.6.7"]
